[gd_scene load_steps=7 format=2]

[ext_resource path="res://themes/disabled_button.tres" type="StyleBox" id=1]
[ext_resource path="res://themes/pressed_button.tres" type="StyleBox" id=2]
[ext_resource path="res://themes/unselected_button.tres" type="StyleBox" id=3]
[ext_resource path="res://themes/selected_button.tres" type="StyleBox" id=4]
[ext_resource path="res://scripts/MenuBtn.gd" type="Script" id=5]
[ext_resource path="res://assets/Sounds/UIButton.wav" type="AudioStream" id=6]

[node name="Button" type="Button"]
margin_right = 250.0
margin_bottom = 67.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 1 )
custom_styles/normal = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0

[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
